kubernetes/rbac.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devops-education-netpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devops-education
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 3001
    - protocol: TCP
      port: 3002
  - from:
    - podSelector:
        matchLabels:
          service: gateway
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 443
